--- a/centos_7_environment/mate_desktop.ini
+++ b/centos_7_environment/mate_desktop.ini
@@ -258,7 +258,7 @@ object-type='menu-bar'
 locked=false
 launcher-location='/usr/share/applications/caja-browser.desktop'
 toplevel-id='top'
-position=222
+position=10
 object-type='launcher'
 
 [panel/objects/notification-area]
@@ -283,11 +283,14 @@ position=415
 object-type='applet'
 panel-right-stick=false
 
+[panel/objects/object-1/prefs]
+group-windows='never'
+
 [panel/objects/terminal]
 locked=false
 launcher-location='/usr/share/applications/mate-terminal.desktop'
 toplevel-id='top'
-position=270
+position=20
 object-type='launcher'
 
 [panel/objects/object-2]
@@ -308,11 +311,22 @@ position=246
 object-type='launcher'
 panel-right-stick=false
 
+[terminal/keybindings]
+paste='<Primary>v'
+new-window='<Primary>n'
+copy='<Primary>c'
+close-tab='<Primary>w'
+close-window='<Primary>q'
+new-tab='<Primary>t'
+
 [terminal/profiles/default]
-background-color='#000000000000'
-title='Mate Terminal'
-palette='#2E2E34343636:#CCCC00000000:#4E4E9A9A0606:#C4C4A0A00000:#34346565A4A4:#757550507B7B:#060698209A9A:#D3D3D7D7CFCF:#555557575353:#EFEF29292929:#8A8AE2E23434:#FCFCE9E94F4F:#72729F9FCFCF:#ADAD7F7FA8A8:#3434E2E2E2E2:#EEEEEEEEECEC'
-title-mode='ignore'
-bold-color='#FFFFFFFFFFFF'
-foreground-color='#E6E6E6E6E6E6'
+foreground-color='#AAAAAAAAAAAA'
 visible-name='Default'
+palette='#2E2E34343636:#CCCC00000000:#4E4E9A9A0606:#C4C4A0A00000:#34346565A4A4:#757550507B7B:#060698209A9A:#D3D3D7D7CFCF:#555557575353:#EFEF29292929:#8A8AE2E23434:#FCFCE9E94F4F:#72729F9FCFCF:#ADAD7F7FA8A8:#3434E2E2E2E2:#EEEEEEEEECEC'
+default-size-columns=120
+default-size-rows=50
+title='Mate Terminal'
+use-custom-default-size=true
+bold-color='#FFFFFFFFFFFF'
+background-color='#18BF18BF18BF'
+title-mode='ignore'
