--- a/centos_7_environment/mate_desktop.ini
+++ b/centos_7_environment/mate_desktop.ini
@@ -89,11 +89,67 @@ tertiary-button-action='default'
 [gnome/desktop/peripherals/tablets/056a:00b9]
 mapping='absolute'
 
+[calc]
+button-mode='basic'
+source-units='degree'
+target-units='radian'
+
+[system-monitor/disktreenew]
+col-6-width=300
+
+[system-monitor]
+maximized=false
+window-state=(963, 760, 392, 197)
+
+[system-monitor/proctree]
+columns-order=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
+col-16-width=90
+sort-order=1
+col-11-width=79
+col-2-width=117
+col-22-width=131
+sort-col=0
+
 [desktop/peripherals/keyboard]
-numlock-state='on'
+numlock-state='off'
+
+[desktop/peripherals/mouse]
+cursor-size=24
+
+[desktop/accessibility/keyboard]
+slowkeys-beep-press=true
+mousekeys-accel-time=1200
+bouncekeys-beep-reject=true
+slowkeys-beep-reject=false
+togglekeys-enable=false
+enable=false
+bouncekeys-enable=false
+stickykeys-enable=false
+feature-state-change-beep=false
+slowkeys-beep-accept=true
+bouncekeys-delay=300
+mousekeys-max-speed=750
+mousekeys-enable=false
+timeout-enable=false
+slowkeys-delay=300
+stickykeys-modifier-beep=true
+stickykeys-two-key-off=true
+mousekeys-init-delay=160
+timeout=120
+slowkeys-enable=false
 
 [desktop/background]
+color-shading-type='vertical-gradient'
+primary-color='#58589191bcbc'
+picture-options='zoom'
 picture-filename='/home/pancho/Pictures/Nd8UdD.png'
+secondary-color='#3c3c8f8f2525'
+
+[desktop/session]
+session-start=1564939758
+
+[desktop/interface]
+enable-animations=false
 
 [mate/pluma/plugins/filebrowser/on-load]
 virtual-root='file:///home/pancho/Desktop'
@@ -217,15 +273,11 @@ root='file:///'
 [pluma]
 statusbar-visible=true
 
-[caja/window-state]
-start-with-sidebar=true
-geometry='800x550+0+0'
-start-with-status-bar=true
-maximized=false
-start-with-toolbar=true
+[marco/general]
+theme='BlueMenta'
 
 [panel/general]
-object-id-list=['menu-bar', 'file-browser', 'terminal', 'notification-area', 'clock', 'object-0', 'object-1', 'object-2', 'object-3']
+object-id-list=['menu-bar', 'file-browser', 'terminal', 'notification-area', 'clock', 'object-0', 'object-1', 'object-2', 'object-3', 'object-4', 'object-5', 'object-6']
 toplevel-id-list=['top']
 
 [panel/toplevels/top]
@@ -234,7 +286,28 @@ orientation='bottom'
 screen=0
 y-bottom=0
 size=24
-y=1416
+y=1056
+
+[panel/objects/object-4]
+launcher-location='/usr/share/applications/deluge.desktop'
+toplevel-id='top'
+position=327
+object-type='launcher'
+panel-right-stick=false
+
+[panel/objects/object-5]
+launcher-location='/usr/share/applications/virtualbox.desktop'
+toplevel-id='top'
+position=359
+object-type='launcher'
+panel-right-stick=false
+
+[panel/objects/object-6]
+launcher-location='/usr/share/applications/mate-calc.desktop'
+toplevel-id='top'
+position=392
+object-type='launcher'
+panel-right-stick=false
 
 [panel/objects/clock]
 applet-iid='ClockAppletFactory::ClockApplet'
@@ -279,7 +352,7 @@ panel-right-stick=false
 [panel/objects/object-1]
 applet-iid='WnckletFactory::WindowListApplet'
 toplevel-id='top'
-position=415
+position=430
 object-type='applet'
 panel-right-stick=false
 
@@ -310,6 +383,13 @@ toplevel-id='top'
 position=246
 object-type='launcher'
 panel-right-stick=false
+
+[caja/window-state]
+start-with-sidebar=true
+geometry='800x550+0+0'
+start-with-status-bar=true
+maximized=false
+start-with-toolbar=true
 
 [terminal/keybindings]
 paste='<Primary>v'
