--- a/centos_7_environment/mate_desktop.ini
+++ b/centos_7_environment/mate_desktop.ini
@@ -1,116 +1,163 @@
-[pluma/plugins/filebrowser/on-load]
-virtual-root='file:///home/pancho/Downloads/centos_7_environment'
+[eom/view]
+background-color='#000000'
+use-background-color=true
+
+[eom/ui]
+image-collection=false
+sidebar=false
+
+[gnome/terminal/legacy/profiles:/:b1dcc9dd-5262-4d8d-a863-c897e6d979b9]
+default-size-columns=100
+use-theme-colors=false
+
+[gnome/nm-applet/eap/5ce7140b-9edb-354f-a2d3-28b4663081cb]
+ignore-phase2-ca-cert=false
+ignore-ca-cert=false
+
+[gnome/gedit/preferences/ui]
+show-tabs-mode='auto'
+
+[gnome/gedit/plugins/filebrowser]
+virtual-root='file:///home/pancho/Desktop'
 tree-view=true
 root='file:///'
 
-[pluma]
-statusbar-visible=true
+[gnome/gedit/plugins]
+active-plugins=['time', 'spell', 'modelines', 'filebrowser', 'docinfo']
 
-[caja/window-state]
-start-with-sidebar=true
-geometry='800x550+0+24'
-start-with-status-bar=true
+[gnome/gedit/state/window]
+size=(1681, 1153)
+state=128
+bottom-panel-size=140
+side-panel-size=200
+side-panel-active-page='GeditWindowDocumentsPanel'
+
+[gnome/login-screen]
+enable-smartcard-authentication=false
+
+[gnome/desktop/app-folders/folders/Utilities]
+translate=true
+categories=['X-GNOME-Utilities']
+apps=['org.gnome.baobab.desktop', 'deja-dup-preferences.desktop', 'eog.desktop', 'evince.desktop', 'org.gnome.FileRoller.desktop', 'gnome-calculator.desktop', 'gnome-dictionary.desktop', 'org.gnome.Characters.desktop', 'org.gnome.DiskUtility.desktop', 'org.gnome.font-viewer.desktop', 'org.gnome.Terminal.desktop', 'org.gnome.Screenshot.desktop', 'gnome-system-log.desktop', 'gnome-system-monitor.desktop', 'gnome-tweak-tool.desktop', 'gucharmap.desktop', 'seahorse.desktop', 'vinagre.desktop', 'yelp.desktop']
+name='X-GNOME-Utilities.directory'
+
+[gnome/desktop/app-folders/folders/Sundry]
+translate=true
+categories=['X-GNOME-Sundry']
+apps=['alacarte.desktop', 'authconfig.desktop', 'ca.desrt.dconf-editor.desktop', 'fedora-release-notes.desktop', 'firewall-config.desktop', 'flash-player-properties.desktop', 'gconf-editor.desktop', 'gnome-abrt.desktop', 'gnome-power-statistics.desktop', 'ibus-setup-anthy.desktop', 'ibus-setup.desktop', 'ibus-setup-hangul.desktop', 'ibus-setup-libbopomofo.desktop', 'ibus-setup-libpinyin.desktop', 'ibus-setup-m17n.desktop', 'ibus-setup-typing-booster.desktop', 'im-chooser.desktop', 'itweb-settings.desktop', 'jhbuild.desktop', 'javaws.desktop', 'java-1.7.0-openjdk-jconsole.desktop', 'java-1.7.0-openjdk-policytool.desktop', 'log4j-chainsaw.desktop', 'log4j-logfactor5.desktop', 'nm-connection-editor.desktop', 'orca.desktop', 'setroubleshoot.desktop', 'system-config-date.desktop', 'system-config-firewall.desktop', 'system-config-keyboard.desktop', 'system-config-language.desktop', 'system-config-printer.desktop', 'system-config-users.desktop', 'vino-preferences.desktop']
+name='X-GNOME-Sundry.directory'
+
+[gnome/desktop/app-folders/folders/YaST]
+translate=true
+categories=['X-SuSE-YaST']
+name='suse-yast.directory'
+
+[gnome/desktop/notifications/application/org-gnome-tweaks]
+application-id='org.gnome.tweaks.desktop'
+
+[gnome/desktop/notifications/application/org-gnome-nautilus]
+application-id='org.gnome.Nautilus.desktop'
+
+[gnome/desktop/notifications/application/firefox]
+application-id='firefox.desktop'
+
+[gnome/desktop/notifications/application/virtualbox]
+application-id='virtualbox.desktop'
+
+[gnome/desktop/notifications/application/abrt-applet]
+application-id='abrt-applet.desktop'
+
+[gnome/desktop/notifications/application/org-gnome-terminal]
+application-id='org.gnome.Terminal.desktop'
+
+[gnome/desktop/notifications/application/deluge]
+application-id='deluge.desktop'
+
+[gnome/desktop/notifications/application/org-gnome-fileroller]
+application-id='org.gnome.FileRoller.desktop'
+
+[gnome/desktop/notifications/application/gnome-system-monitor]
+application-id='gnome-system-monitor.desktop'
+
+[gnome/desktop/peripherals/stylus/56801281]
+secondary-button-action='default'
+pressure-curve=[0, 0, 100, 100]
+button-action='default'
+eraser-pressure-curve=[0, 0, 100, 100]
+tertiary-button-action='default'
+
+[gnome/desktop/peripherals/tablets/056a:00b9]
+mapping='absolute'
+
+[engrampa/listing]
+sort-method='name'
+name-column-width=378
+sort-type='ascending'
+list-mode='as-folder'
+show-path=false
+
+[engrampa/ui]
+sidebar-width=200
+window-height=480
+window-width=1193
+
+[calc]
+button-mode='basic'
+source-units='degree'
+target-units='radian'
+
+[power-manager]
+button-power='interactive'
+brightness-ac=100.0
+backlight-battery-reduce=false
+button-lid-ac='suspend'
+action-critical-battery='hibernate'
+button-suspend='suspend'
+idle-dim-battery=false
+button-lid-battery='suspend'
+icon-policy='charge'
+
+[system-monitor/proctree]
+sort-col=8
+columns-order=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
+col-2-width=117
+col-8-width=78
+col-22-width=241
+col-11-width=79
+col-16-width=90
+sort-order=0
+
+[system-monitor]
+network-in-bits=false
+window-state=(963, 760, 901, 78)
+view-as=0
+update-interval=3000
 maximized=false
-start-with-toolbar=true
+disks-interval=5000
 
-[panel/general]
-object-id-list=['menu-bar', 'file-browser', 'terminal', 'web-browser', 'notification-area', 'clock', 'show-desktop', 'window-list', 'workspace-switcher']
-toplevel-id-list=['top', 'bottom']
+[system-monitor/disktreenew]
+col-6-width=421
 
-[panel/toplevels/bottom]
-expand=true
-orientation='bottom'
-screen=0
-y-bottom=0
-size=24
-y=1056
+[desktop/sound]
+theme-name='__no_sounds'
+event-sounds=false
 
-[panel/toplevels/top]
-expand=true
-orientation='top'
-screen=0
-size=24
+[desktop/keybindings/custom0]
+action='caja /usr/share/applications/'
+binding='<Primary><Alt>a'
+name='apps'
 
-[panel/objects/workspace-switcher]
-applet-iid='WnckletFactory::WorkspaceSwitcherApplet'
-locked=true
-toplevel-id='bottom'
-position=0
-object-type='applet'
-panel-right-stick=true
-
-[panel/objects/clock]
-applet-iid='ClockAppletFactory::ClockApplet'
-locked=true
-toplevel-id='top'
-position=0
-object-type='applet'
-panel-right-stick=true
-
-[panel/objects/clock/prefs]
-format='24-hour'
-custom-format=''
-
-[panel/objects/menu-bar]
-locked=true
-toplevel-id='top'
-position=0
-object-type='menu-bar'
-
-[panel/objects/window-list]
-applet-iid='WnckletFactory::WindowListApplet'
-locked=true
-toplevel-id='bottom'
-position=20
-object-type='applet'
-
-[panel/objects/file-browser]
-locked=true
-launcher-location='/usr/share/applications/caja-browser.desktop'
-toplevel-id='top'
-position=10
-object-type='launcher'
-
-[panel/objects/notification-area]
-applet-iid='NotificationAreaAppletFactory::NotificationArea'
-locked=true
-toplevel-id='top'
-position=10
-object-type='applet'
-panel-right-stick=true
-
-[panel/objects/show-desktop]
-applet-iid='WnckletFactory::ShowDesktopApplet'
-locked=true
-toplevel-id='bottom'
-position=0
-object-type='applet'
-
-[panel/objects/web-browser]
-locked=true
-launcher-location='/usr/share/applications/firefox.desktop'
-toplevel-id='top'
-position=30
-object-type='launcher'
-
-[panel/objects/terminal]
-locked=true
-launcher-location='/usr/share/applications/mate-terminal.desktop'
-toplevel-id='top'
-position=20
-object-type='launcher'
-
-[terminal/profiles/default]
-background-color='#000000000000'
-title='Mate Terminal'
-palette='#2E2E34343636:#CCCC00000000:#4E4E9A9A0606:#C4C4A0A00000:#34346565A4A4:#757550507B7B:#060698209A9A:#D3D3D7D7CFCF:#555557575353:#EFEF29292929:#8A8AE2E23434:#FCFCE9E94F4F:#72729F9FCFCF:#ADAD7F7FA8A8:#3434E2E2E2E2:#EEEEEEEEECEC'
-title-mode='ignore'
-bold-color='#FFFFFFFFFFFF'
-foreground-color='#E6E6E6E6E6E6'
-visible-name='Default'
+[desktop/peripherals/touchpad]
+natural-scroll=true
+disable-while-typing=false
+tap-to-click=true
 
 [desktop/peripherals/keyboard]
-numlock-state='off'
+numlock-state='on'
+
+[desktop/peripherals/mouse]
+cursor-size=24
+cursor-theme='mate-black'
 
 [desktop/accessibility/keyboard]
 slowkeys-beep-press=true
@@ -134,5 +181,325 @@ mousekeys-init-delay=160
 timeout=120
 slowkeys-enable=false
 
+[desktop/background]
+color-shading-type='vertical-gradient'
+primary-color='#58589191bcbc'
+picture-options='zoom'
+picture-filename='/home/pancho/Pictures/Nd8UdD.png'
+secondary-color='#3c3c8f8f2525'
+
 [desktop/session]
-session-start=1565064091
+session-start=1565072787
+
+[desktop/interface]
+menus-have-icons=true
+can-change-accels=false
+enable-animations=false
+icon-theme='menta'
+gtk-theme='BlueMenta'
+toolbar-style='both-horiz'
+
+[mate/pluma/plugins/filebrowser/on-load]
+virtual-root='file:///home/pancho/Desktop'
+tree-view=true
+root='file:///'
+
+[mate/pluma]
+statusbar-visible=true
+
+[mate/caja/window-state]
+start-with-sidebar=true
+start-with-toolbar=true
+start-with-status-bar=true
+
+[mate/panel/general]
+object-id-list=['menu-bar', 'file-browser', 'terminal', 'web-browser', 'notification-area', 'clock', 'show-desktop', 'window-list', 'workspace-switcher']
+toplevel-id-list=['top', 'bottom']
+
+[mate/panel/toplevels/bottom]
+expand=true
+orientation='bottom'
+screen=0
+y-bottom=0
+size=24
+y=1416
+
+[mate/panel/toplevels/top]
+expand=true
+orientation='bottom'
+screen=0
+y-bottom=0
+size=24
+y=1416
+
+[mate/panel/objects/workspace-switcher]
+applet-iid='WnckletFactory::WorkspaceSwitcherApplet'
+locked=true
+toplevel-id='bottom'
+position=0
+object-type='applet'
+panel-right-stick=true
+
+[mate/panel/objects/clock]
+applet-iid='ClockAppletFactory::ClockApplet'
+locked=true
+toplevel-id='top'
+position=0
+object-type='applet'
+panel-right-stick=true
+
+[mate/panel/objects/clock/prefs]
+format='24-hour'
+custom-format=''
+
+[mate/panel/objects/menu-bar]
+locked=true
+toplevel-id='top'
+position=0
+object-type='menu-bar'
+
+[mate/panel/objects/window-list]
+applet-iid='WnckletFactory::WindowListApplet'
+locked=true
+toplevel-id='bottom'
+position=20
+object-type='applet'
+
+[mate/panel/objects/file-browser]
+locked=true
+launcher-location='/usr/share/applications/caja-browser.desktop'
+toplevel-id='top'
+position=10
+object-type='launcher'
+
+[mate/panel/objects/notification-area]
+applet-iid='NotificationAreaAppletFactory::NotificationArea'
+locked=true
+toplevel-id='top'
+position=10
+object-type='applet'
+panel-right-stick=true
+
+[mate/panel/objects/show-desktop]
+applet-iid='WnckletFactory::ShowDesktopApplet'
+locked=true
+toplevel-id='bottom'
+position=0
+object-type='applet'
+
+[mate/panel/objects/web-browser]
+locked=true
+launcher-location='/usr/share/applications/firefox.desktop'
+toplevel-id='top'
+position=30
+object-type='launcher'
+
+[mate/panel/objects/terminal]
+locked=true
+launcher-location='/usr/share/applications/mate-terminal.desktop'
+toplevel-id='top'
+position=20
+object-type='launcher'
+
+[mate/terminal/profiles/default]
+background-color='#000000000000'
+title='Mate Terminal'
+palette='#2E2E34343636:#CCCC00000000:#4E4E9A9A0606:#C4C4A0A00000:#34346565A4A4:#757550507B7B:#060698209A9A:#D3D3D7D7CFCF:#555557575353:#EFEF29292929:#8A8AE2E23434:#FCFCE9E94F4F:#72729F9FCFCF:#ADAD7F7FA8A8:#3434E2E2E2E2:#EEEEEEEEECEC'
+title-mode='ignore'
+bold-color='#FFFFFFFFFFFF'
+foreground-color='#E6E6E6E6E6E6'
+visible-name='Default'
+
+[mate/desktop/peripherals/keyboard]
+numlock-state='on'
+
+[pluma/plugins/filebrowser/on-load]
+virtual-root='file:///home/pancho/Desktop'
+tree-view=true
+root='file:///'
+
+[pluma]
+statusbar-visible=true
+
+[marco/general]
+button-layout='menu:minimize,maximize,close'
+theme='BlueMenta'
+
+[caja/preferences]
+default-folder-viewer='list-view'
+
+[caja/window-state]
+sidebar-width=187
+start-with-sidebar=true
+geometry='1058x683+0+0'
+start-with-status-bar=true
+maximized=false
+start-with-toolbar=true
+
+[caja/list-view]
+default-visible-columns=['name', 'size', 'type', 'date_modified']
+default-column-order=['name', 'size', 'type', 'date_modified', 'date_accessed', 'group', 'where', 'mime_type', 'octal_permissions', 'owner', 'permissions', 'selinux_context']
+
+[panel/general]
+object-id-list=['menu-bar', 'file-browser', 'terminal', 'notification-area', 'clock', 'object-1', 'object-2', 'object-3', 'object-5', 'object-6', 'object-7', 'object-4', 'object-8', 'object-9', 'object-10', 'object-11']
+toplevel-id-list=['top']
+
+[panel/toplevels/top]
+expand=true
+orientation='bottom'
+screen=0
+y-bottom=0
+size=24
+y=1056
+
+[panel/objects/object-4]
+launcher-location='code.desktop'
+toplevel-id='top'
+position=318
+object-type='launcher'
+panel-right-stick=false
+
+[panel/objects/object-5]
+launcher-location='/usr/share/applications/virtualbox.desktop'
+toplevel-id='top'
+position=342
+object-type='launcher'
+panel-right-stick=false
+
+[panel/objects/object-6]
+launcher-location='/usr/share/applications/mate-calc.desktop'
+toplevel-id='top'
+position=366
+object-type='launcher'
+panel-right-stick=false
+
+[panel/objects/clock]
+applet-iid='ClockAppletFactory::ClockApplet'
+locked=true
+toplevel-id='top'
+position=0
+object-type='applet'
+panel-right-stick=true
+
+[panel/objects/clock/prefs]
+show-temperature=false
+show-date=false
+show-week-numbers=false
+format='24-hour'
+custom-format=''
+show-weather=false
+
+[panel/objects/object-7]
+launcher-location='/usr/share/applications/transmission-gtk.desktop'
+toplevel-id='top'
+position=414
+object-type='launcher'
+panel-right-stick=false
+
+[panel/objects/object-10]
+launcher-location='/usr/share/applications/rclone-browser.desktop'
+toplevel-id='top'
+position=449
+object-type='launcher'
+panel-right-stick=false
+
+[panel/objects/object-8]
+toplevel-id='top'
+action-type='logout'
+position=1636
+object-type='action'
+panel-right-stick=false
+
+[panel/objects/object-11]
+applet-iid='NetspeedAppletFactory::NetspeedApplet'
+toplevel-id='top'
+position=1504
+object-type='applet'
+panel-right-stick=false
+
+[panel/objects/object-9]
+launcher-location='/usr/share/applications/blueman-manager.desktop'
+toplevel-id='top'
+position=390
+object-type='launcher'
+panel-right-stick=false
+
+[panel/objects/menu-bar]
+locked=true
+toplevel-id='top'
+position=0
+object-type='menu-bar'
+
+[panel/objects/file-browser]
+locked=false
+launcher-location='/usr/share/applications/caja-browser.desktop'
+toplevel-id='top'
+position=10
+object-type='launcher'
+
+[panel/objects/notification-area]
+applet-iid='NotificationAreaAppletFactory::NotificationArea'
+locked=true
+toplevel-id='top'
+position=10
+object-type='applet'
+panel-right-stick=true
+
+[panel/objects/object-1]
+applet-iid='WnckletFactory::WindowListApplet'
+toplevel-id='top'
+position=473
+object-type='applet'
+panel-right-stick=false
+
+[panel/objects/object-1/prefs]
+group-windows='always'
+
+[panel/objects/terminal]
+locked=false
+launcher-location='/usr/share/applications/mate-terminal.desktop'
+toplevel-id='top'
+position=20
+object-type='launcher'
+
+[panel/objects/object-2]
+applet-iid='MultiLoadAppletFactory::MultiLoadApplet'
+toplevel-id='top'
+position=1508
+object-type='applet'
+panel-right-stick=false
+
+[panel/objects/object-2/prefs]
+view-memload=true
+view-netload=true
+
+[panel/objects/object-3]
+launcher-location='/usr/share/applications/google-chrome.desktop'
+toplevel-id='top'
+position=294
+object-type='launcher'
+panel-right-stick=false
+
+[terminal/keybindings]
+paste='<Primary>v'
+new-window='<Primary>n'
+copy='<Primary>c'
+close-tab='<Primary>w'
+close-window='<Primary>q'
+new-tab='<Primary>t'
+
+[terminal/profiles/default]
+foreground-color='#AAAAAAAAAAAA'
+title-mode='ignore'
+visible-name='Default'
+palette='#000000000000:#CDCD00000000:#0000CDCD0000:#CDCDCDCD0000:#1E1D9090FFFF:#CDCD0000CDCD:#0000CDCDCDCD:#E5E4E5E4E5E4:#4C4B4C4B4C4B:#FFFF00000000:#0000FFFF0000:#FFFFFFFF0000:#46468282B4B3:#FFFF0000FFFF:#0000FFFFFFFF:#FFFFFFFFFFFF'
+default-size-columns=120
+default-size-rows=50
+title='Mate Terminal'
+cursor-shape='block'
+use-custom-default-size=true
+use-theme-colors=false
+cursor-blink-mode='system'
+background-color='#18BF18BF18BF'
+bold-color='#FFFFFFFFFFFF'
+word-chars="'rs=0:di=01;34:ln=01;36:mh=00:pi=40;33'"
