tmux configuraciones nuevas

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -5,3 +5,28 @@ set-window-option -g xterm-keys on
 
 # cambia el prefijo a Contro-A
 set -g prefix C-a
+
+# Barra de estado 
+set -g status-position bottom 
+set -g status-justify centre
+set -g window-status-format " #I #W#F "
+set -g status-bg colour3
+set -g status-fg colour0
+set -g window-status-current-format " #I #W#F "
+set -g window-status-current-style reverse
+
+set -g status-left-length 50
+set -g status-left "#[reverse] #h #[noreverse] #S "
+
+# Formato de fecha y hora
+set -g status-right-length 50
+set -g status-right "#[noreverse] %d/%m/%Y #[reverse] %H:%M "
+
+# Estilo para los contornos de la ventana
+set -g pane-border-status top
+set -g pane-border-style fg=colour8
+set -g pane-active-border-style fg=colour3
+set -g pane-border-format "#{?pane_active,#[bold],#[dim]}  #{pane_current_command}  "
+
+# Para reset de las cofiguracion hay que matar el proceso: tmux kill-server
+# Para actualizar las configuraciones: tmux source-file ~/.tmux.conf
