tmux: desactivacion de control-z

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -4,7 +4,12 @@ set -g default-terminal "xterm-256color"
 set-window-option -g xterm-keys on
 
 # cambia el prefijo a Contro-A
+unbind C-b
 set -g prefix C-a
+
+# desabilita el shortcut Control-Z porque cuando se acciona
+# queda todo en negro, y no responde nada.
+unbind C-z
 
 # Barra de estado 
 set -g status-position bottom 
