--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -3,7 +3,7 @@
 set -g default-terminal "xterm-256color"
 set-window-option -g xterm-keys on
 
-# cambia el prefijo a Contro-A
+# cambia el prefijo a Control-A
 unbind C-b
 set -g prefix C-a
 
