--- a/conf/mate_desktop.ini
+++ b/conf/mate_desktop.ini
@@ -1,15 +1,45 @@
+[terminal/keybindings]
+paste='<Primary>v'
+new-window='<Primary>n'
+copy='<Primary>c'
+close-tab='<Primary>w'
+close-window='<Primary><Shift>q'
+new-tab='<Primary>t'
+
+[terminal/profiles/default]
+foreground-color='#AAAAAAAAAAAA'
+title-mode='ignore'
+visible-name='Default'
+login-shell=false
+palette='#000000000000:#CCCC00000000:#4E4D9A9A0605:#C4C3A0A00000:#34346564A4A3:#7575504F7B7B:#060598979A9A:#D3D3D7D6CFCF:#555557575353:#EFEF29282928:#8A89E2E23434:#FCFBE9E84F4F:#72729F9ECFCF:#ADAC7F7EA8A8:#3434E2E2E2E2:#EEEDEEEDECEB'
+custom-command='tmux'
+default-size-columns=120
+default-size-rows=50
+title='Mate Terminal'
+cursor-shape='block'
+background-darkness=0.74364406779661019
+use-custom-command=true
+use-system-font=true
+background-type='solid'
+use-theme-colors=false
+use-custom-default-size=true
+cursor-blink-mode='system'
+background-color='#18BF18BF18BF'
+bold-color='#FFFFFFFFFFFF'
+word-chars="'rs=0:di=01;34:ln=01;36:mh=00:pi=40;33'"
+
 [notification-daemon]
+popup-location='top_right'
 theme='coco'
 
-[eom/view]
-background-color='#000000'
-use-background-color=true
-
-[eom/ui]
-image-collection=false
-statusbar=true
-sidebar=false
-toolbar=true
+[stickynotes]
+default-height=100
+desktop-hide=true
+sticky=true
+default-width=100
+force-default=false
+use-system-color=true
+use-system-font=true
 
 [gnome/terminal/legacy/profiles:/:b1dcc9dd-5262-4d8d-a863-c897e6d979b9]
 default-size-columns=100
@@ -94,17 +124,27 @@ tertiary-button-action='default'
 [gnome/desktop/peripherals/tablets/056a:00b9]
 mapping='absolute'
 
+[eom/view]
+background-color='#000000'
+use-background-color=true
+
+[eom/ui]
+image-collection=false
+statusbar=true
+sidebar=false
+toolbar=true
+
 [engrampa/listing]
 sort-method='name'
-name-column-width=378
+name-column-width=603
 sort-type='ascending'
 list-mode='as-folder'
 show-path=false
 
 [engrampa/ui]
 sidebar-width=200
-window-height=480
-window-width=1193
+window-height=920
+window-width=1440
 
 [calc]
 button-mode='basic'
@@ -115,12 +155,15 @@ target-units='radian'
 themes=@as []
 mode='blank-only'
 
+[disk-usage-analyzer/ui]
+active-chart='treemap'
+
 [power-manager]
 button-power='interactive'
 brightness-ac=100.0
 info-last-device='/org/freedesktop/UPower/devices/battery_BAT0'
 backlight-battery-reduce=false
-button-lid-ac='suspend'
+button-lid-ac='nothing'
 action-critical-battery='hibernate'
 button-suspend='suspend'
 info-history-type='charge'
@@ -130,19 +173,21 @@ info-stats-type='discharge-accuracy'
 icon-policy='charge'
 
 [system-monitor/proctree]
-sort-col=0
+sort-col=15
 columns-order=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
+col-0-width=259
 col-2-width=117
-col-8-width=78
+col-8-width=65
 col-22-width=241
-col-11-width=79
+col-11-width=46
 col-16-width=90
 sort-order=0
+col-15-width=189
 
 [system-monitor]
 kill-dialog=true
 network-in-bits=false
-window-state=(963, 760, 361, 144)
+window-state=(963, 760, 454, 236)
 graph-update-interval=1000
 update-interval=3000
 maximized=false
@@ -151,11 +196,23 @@ show-tree=false
 disks-interval=5000
 
 [system-monitor/disktreenew]
-col-6-width=421
+col-1-width=182
+col-6-width=425
 
-[desktop/sound]
-theme-name='__no_sounds'
-event-sounds=false
+[screenshot]
+include-pointer=true
+include-border=true
+border-effect='none'
+delay=0
+last-save-directory='file:///home/pancho/Desktop'
+
+[desktop/interface]
+menus-have-icons=true
+can-change-accels=false
+enable-animations=false
+icon-theme='Zafiro-icons'
+gtk-theme='Juno'
+toolbar-style='both-horiz'
 
 [desktop/keybindings/custom0]
 action='caja /usr/share/applications/'
@@ -197,12 +254,23 @@ action='killall xinit'
 binding='<Primary><Alt>BackSpace'
 name='X Exit'
 
+[desktop/session]
+auto-save-session=false
+session-start=1601015786
+
 [desktop/peripherals/touchpad]
 natural-scroll=true
 disable-while-typing=false
 tap-to-click=true
 
+[desktop/peripherals/keyboard/preview]
+width=1440
+height=810
+x=240
+y=141
+
 [desktop/peripherals/keyboard/kbd]
+layouts=['latam']
 options=@as []
 
 [desktop/peripherals/keyboard]
@@ -211,9 +279,13 @@ repeat=true
 
 [desktop/peripherals/mouse]
 motion-threshold=1
-cursor-size=24
+cursor-size=18
 motion-acceleration=1.0
-cursor-theme='mate'
+cursor-theme='default'
+
+[desktop/sound]
+theme-name='__no_sounds'
+event-sounds=false
 
 [desktop/accessibility/keyboard]
 slowkeys-beep-press=true
@@ -241,19 +313,12 @@ slowkeys-enable=false
 color-shading-type='vertical-gradient'
 primary-color='#58589191bcbc'
 picture-options='zoom'
-picture-filename='/home/pancho/Pictures/Nd8UdD.png'
+picture-filename='/home/pancho/Pictures/22.jpg'
 secondary-color='#3c3c8f8f2525'
 
-[desktop/session]
-session-start=1565498635
-
-[desktop/interface]
-menus-have-icons=true
-can-change-accels=false
-enable-animations=false
-icon-theme='flattr-icons'
-gtk-theme='TraditionalOk'
-toolbar-style='both-horiz'
+[desktop/font-rendering]
+antialiasing='rgba'
+hinting='slight'
 
 [mate/pluma/plugins/filebrowser/on-load]
 virtual-root='file:///home/pancho/Desktop'
@@ -370,7 +435,7 @@ visible-name='Default'
 numlock-state='on'
 
 [pluma/plugins/filebrowser/on-load]
-virtual-root='file:///etc'
+virtual-root='file:///home/pancho/Documents/GitHub/videovina/private/templates_base/glitch/footage/twist_01/twist_01_normal_hd'
 tree-view=true
 root='file:///'
 
@@ -380,42 +445,60 @@ statusbar-visible=true
 [marco/general]
 mouse-button-modifier=''
 button-layout='menu:minimize,maximize,close'
-theme='TraditionalOk'
+theme='Juno'
 
 [marco/global-keybindings]
 panel-run-dialog='disabled'
+switch-group='<Alt>ntilde'
 
 [marco/window-keybindings]
 close='<Alt>q'
 activate-window-menu='disabled'
 
+[caja/compact-view]
+all-columns-have-same-width=false
+
 [caja/preferences]
-default-folder-viewer='list-view'
 always-use-location-entry=false
+always-use-browser=true
+executable-text-activation='display'
+click-policy='double'
+enable-delete=false
+default-folder-viewer='list-view'
+sort-directories-first=false
+show-hidden-files=false
 
 [caja/window-state]
-sidebar-width=252
-start-with-sidebar=true
-geometry='1058x588+358+209'
+side-pane-view='places'
+sidebar-width=273
 start-with-status-bar=true
-maximized=false
+geometry='1187x821+365+97'
 start-with-toolbar=true
+maximized=false
+start-with-sidebar=true
+start-with-location-bar=true
 
 [caja/list-view]
 default-visible-columns=['name', 'size', 'type', 'date_modified']
 default-column-order=['name', 'size', 'type', 'date_modified', 'date_accessed', 'group', 'where', 'mime_type', 'octal_permissions', 'owner', 'permissions', 'selinux_context']
 
+[caja/sidebar-panels/tree]
+show-only-directories=false
+
+[atril/default]
+window-ratio=(2.0535331905781584, 0.83897605284888521)
+
 [panel/general]
 show-program-list=true
 toplevel-id-list=['top']
 history-mate-run=['xfce4-appfinder', 'mate-volume-control', 'caja --no-desktop --browser ', 'maya/', 'ls', '/usr/bin/gparted ']
-object-id-list=['notification-area', 'clock', 'object-1', 'object-2', 'object-5', 'object-6', 'object-7', 'object-8', 'object-11', 'object-0', 'object-12', 'object-14', 'object-16', 'object-3', 'object-17', 'object-10', 'object-4']
+object-id-list=['notification-area', 'clock', 'object-1', 'object-2', 'object-0', 'object-12', 'object-14', 'object-17', 'object-10', 'object-4', 'object-11', 'object-7', 'object-8', 'object-18', 'object-13', 'object-19', 'object-20', 'object-16', 'object-5', 'object-6', 'object-3']
 
 [panel/toplevels/top]
 x=0
-y=1048
-y-bottom=0
-orientation='bottom'
+y=0
+y-bottom=-1
+orientation='top'
 y-centered=false
 expand=true
 size=31
@@ -423,6 +506,7 @@ screen=0
 x-right=-1
 
 [panel/toplevels/top/background]
+opacity=37276
 type='none'
 
 [panel/objects/object-4]
@@ -433,16 +517,16 @@ object-type='launcher'
 panel-right-stick=false
 
 [panel/objects/object-5]
-launcher-location='/usr/share/applications/virtualbox.desktop'
+launcher-location='/usr/share/applications/mate-terminal.desktop'
 toplevel-id='top'
-position=145
+position=275
 object-type='launcher'
 panel-right-stick=false
 
 [panel/objects/object-6]
-launcher-location='/usr/share/applications/mate-calc.desktop'
+launcher-location='sh.desktop'
 toplevel-id='top'
-position=204
+position=486
 object-type='launcher'
 panel-right-stick=false
 
@@ -450,23 +534,25 @@ panel-right-stick=false
 applet-iid='ClockAppletFactory::ClockApplet'
 locked=false
 toplevel-id='top'
-position=1832
+position=2111
 object-type='applet'
 panel-right-stick=false
 
 [panel/objects/clock/prefs]
-show-temperature=false
-show-date=false
-show-week-numbers=false
+show-seconds=false
+show-date=true
 format='24-hour'
+show-week-numbers=false
+cities=['<location name="" city="Santiago" timezone="America/Santiago" latitude="-33.383331" longitude="-70.783333" code="SCEL" current="true"/>']
 custom-format=''
-show-weather=false
+show-temperature=true
+show-weather=true
 
 [panel/objects/object-7]
-launcher-location='/usr/share/applications/transmission-gtk.desktop'
+applet-iid='CPUFreqAppletFactory::CPUFreqApplet'
 toplevel-id='top'
-position=228
-object-type='launcher'
+position=1858
+object-type='applet'
 panel-right-stick=false
 
 [panel/objects/object-10]
@@ -477,18 +563,17 @@ object-type='launcher'
 panel-right-stick=false
 
 [panel/objects/object-8]
-locked=true
+launcher-location='/usr/share/applications/com.blackmagicdesign.resolve.desktop'
 toplevel-id='top'
-action-type='logout'
-position=24
-object-type='action'
-panel-right-stick=true
+position=368
+object-type='launcher'
+panel-right-stick=false
 
 [panel/objects/object-11]
-applet-iid='NetspeedAppletFactory::NetspeedApplet'
+launcher-location='/usr/share/applications/code.desktop'
 toplevel-id='top'
-position=1381
-object-type='applet'
+position=336
+object-type='launcher'
 panel-right-stick=false
 
 [panel/objects/object-12]
@@ -498,32 +583,46 @@ position=507
 object-type='launcher'
 panel-right-stick=false
 
+[panel/objects/object-20]
+launcher-location='/usr/share/applications/Natron2.desktop'
+toplevel-id='top'
+position=455
+object-type='launcher'
+panel-right-stick=false
+
+[panel/objects/object-13]
+launcher-location='/usr/share/applications/VinaRender.desktop'
+toplevel-id='top'
+position=427
+object-type='launcher'
+panel-right-stick=false
+
 [panel/objects/object-14]
 launcher-location='caja-browser.desktop'
 toplevel-id='top'
-position=91
+position=244
 object-type='launcher'
 panel-right-stick=false
 
 [panel/objects/notification-area]
 applet-iid='NotificationAreaAppletFactory::NotificationArea'
-locked=true
+locked=false
 toplevel-id='top'
-position=1721
+position=2328
 object-type='applet'
 panel-right-stick=false
 
 [panel/objects/object-16]
-launcher-location='mate-terminal.desktop'
+locked=true
 toplevel-id='top'
-position=64
-object-type='launcher'
+position=0
+object-type='menu-bar'
 panel-right-stick=false
 
 [panel/objects/object-17]
 launcher-location='google-chrome.desktop'
 toplevel-id='top'
-position=120
+position=306
 object-type='launcher'
 panel-right-stick=false
 
@@ -534,61 +633,49 @@ position=252
 object-type='launcher'
 panel-right-stick=false
 
+[panel/objects/object-18]
+applet-iid='StickyNotesAppletFactory::StickyNotesApplet'
+toplevel-id='top'
+position=2479
+object-type='applet'
+panel-right-stick=false
+
 [panel/objects/object-1]
 applet-iid='WnckletFactory::WindowListApplet'
 toplevel-id='top'
-position=320
+position=519
 object-type='applet'
 panel-right-stick=false
 
 [panel/objects/object-1/prefs]
-group-windows='always'
+group-windows='never'
+
+[panel/objects/object-19]
+launcher-location='/usr/share/applications/spotify.desktop'
+toplevel-id='top'
+position=398
+object-type='launcher'
+panel-right-stick=false
 
 [panel/objects/object-2]
 applet-iid='MultiLoadAppletFactory::MultiLoadApplet'
 toplevel-id='top'
-position=1567
+position=1952
 object-type='applet'
 panel-right-stick=false
 
 [panel/objects/object-2/prefs]
+cpuload-color4='#000000'
 size=70
 view-memload=true
-view-netload=false
 view-diskload=false
 memload-color3='#115A36'
+cpuload-color3='#FF0500'
+view-netload=false
 
 [panel/objects/object-3]
 toplevel-id='top'
-position=7
-object-type='menu'
-use-menu-path=false
+action-type='force-quit'
+position=2520
+object-type='action'
 panel-right-stick=false
-tooltip='Main Menu'
-
-[terminal/keybindings]
-paste='<Primary>v'
-new-window='<Primary>n'
-copy='<Primary>c'
-close-tab='<Primary>w'
-close-window='<Primary>q'
-new-tab='<Primary>t'
-
-[terminal/profiles/default]
-foreground-color='#AAAAAAAAAAAA'
-title-mode='ignore'
-visible-name='Default'
-login-shell=false
-palette='#000000000000:#CCCC00000000:#4E4D9A9A0605:#C4C3A0A00000:#34346564A4A3:#7575504F7B7B:#060598979A9A:#D3D3D7D6CFCF:#555457565352:#EFEF29282928:#8A89E2E23434:#FCFBE9E84F4F:#72729F9ECFCF:#ADAC7F7EA8A8:#3434E2E2E2E2:#EEEDEEEDECEB'
-custom-command=''
-default-size-columns=120
-default-size-rows=50
-title='Mate Terminal'
-cursor-shape='block'
-use-custom-command=false
-use-custom-default-size=true
-use-theme-colors=false
-cursor-blink-mode='system'
-background-color='#18BF18BF18BF'
-bold-color='#FFFFFFFFFFFF'
-word-chars="'rs=0:di=01;34:ln=01;36:mh=00:pi=40;33'"
