vimrc tmux update

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,7 +1,8 @@
 
-# Para que tmux no de conflictos con el vim
-set -g default-terminal "xterm-256color"
-set-window-option -g xterm-keys on
+# Para que tmux funcione con 24 bit de colores
+set-option -g  default-terminal "xterm-256color" 
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 
 # cambia el prefijo a Control-A
 unbind C-b
