--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -16,8 +16,8 @@ unbind C-z
 set -g status-position bottom 
 set -g status-justify centre
 set -g window-status-format " #I #W#F "
-set -g status-bg colour3
-set -g status-fg colour0
+set -g status-bg "#e5c07b"
+set -g status-fg "#1f2127"
 set -g window-status-current-format " #I #W#F "
 set -g window-status-current-style reverse
 
@@ -28,11 +28,9 @@ set -g status-left "#[reverse] #h #[noreverse] #S "
 set -g status-right-length 50
 set -g status-right "#[noreverse] %d/%m/%Y #[reverse] %H:%M "
 
-# Estilo para los contornos de la ventana
-set -g pane-border-status top
+# Linea de los splits 
 set -g pane-border-style fg=colour8
-set -g pane-active-border-style fg=colour3
-set -g pane-border-format "#{?pane_active,#[bold],#[dim]}  #{pane_current_command}  "
+set -g pane-active-border-style fg="#e5c07b"
 
 # Para reset de las cofiguracion hay que matar el proceso: tmux kill-server
 # Para actualizar las configuraciones: tmux source-file ~/.tmux.conf
