--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -16,7 +16,7 @@ unbind C-z
 set -g status-position bottom 
 set -g status-justify centre
 set -g window-status-format " #I #W#F "
-set -g status-bg "#e5c07b"
+set -g status-bg "#98c379"
 set -g status-fg "#1f2127"
 set -g window-status-current-format " #I #W#F "
 set -g window-status-current-style reverse
@@ -30,7 +30,7 @@ set -g status-right "#[noreverse] %d/%m/%Y #[reverse] %H:%M "
 
 # Linea de los splits 
 set -g pane-border-style fg=colour8
-set -g pane-active-border-style fg="#e5c07b"
+set -g pane-active-border-style fg="#98c379"
 
 # Para reset de las cofiguracion hay que matar el proceso: tmux kill-server
 # Para actualizar las configuraciones: tmux source-file ~/.tmux.conf
