--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,4 +1,9 @@
 
+# Plugins: Ctrl-A Shift-i  para instalar
+set -g @plugin 'odedlaz/tmux-onedark-theme'
+run '~/.tmux/plugins/tpm/tpm'
+
+
 # Para que tmux funcione con 24 bit de colores
 set-option -g  default-terminal "xterm-256color" 
 set-option -ga terminal-overrides ",xterm-256color:Tc"
@@ -12,21 +17,6 @@ set -g prefix C-a
 # queda todo en negro, y no responde nada.
 unbind C-z
 
-# Barra de estado 
-set -g status-position bottom 
-set -g status-justify centre
-set -g window-status-format " #I #W#F "
-set -g status-bg "#98c379"
-set -g status-fg "#1f2127"
-set -g window-status-current-format " #I #W#F "
-set -g window-status-current-style reverse
-
-set -g status-left-length 50
-set -g status-left "#[reverse] #h #[noreverse] #S "
-
-# Formato de fecha y hora
-set -g status-right-length 50
-set -g status-right "#[noreverse] %d/%m/%Y #[reverse] %H:%M "
 
 # Linea de los splits 
 set -g pane-border-style fg=colour8
@@ -34,3 +24,5 @@ set -g pane-active-border-style fg="#98c379"
 
 # Para reset de las cofiguracion hay que matar el proceso: tmux kill-server
 # Para actualizar las configuraciones: tmux source-file ~/.tmux.conf
+
+
