vimrc update y mapeo de caps a ctrl

--- a/xorg/10-keyboard.conf
+++ b/xorg/10-keyboard.conf
@@ -2,5 +2,5 @@ Section "InputClass"
 	Identifier "system-keyboard"
 	MatchIsKeyboard "on"
 	Option "XkbLayout"  "us" 
-	Option "XkbOptions" "caps:none" # Desabilita el bloqueo de mayusculas
+	Option "XkbOptions" "ctrl:nocaps" # conbierte el 'caps lock' a control
 EndSection
