coc python : actualizacion

--- a/dotfiles/.vim/coc-settings.json
+++ b/dotfiles/.vim/coc-settings.json
@@ -1,4 +1,6 @@
 {
+	"python.linting.pylintEnabled": true,
+	"python.linting.mypyEnabled": true,
 	"diagnostic.enable": true,
 	"languageserver": {
 		"ccls": {
