--- a/xorg/50-synaptics.conf
+++ b/xorg/50-synaptics.conf
@@ -2,9 +2,10 @@ Section "InputClass"
 	Identifier 	"touchpad catchall"
 	Driver 		"synaptics"
 
-	# Permite el scroll natural
-	Option      "VertScrollDelta"          "-111"
-	Option      "HorizScrollDelta"         "-111"
+	# Permite el scroll natural con el signo - 
+    # y el numero es la velocidad
+	Option      "VertScrollDelta"          "-30"
+	Option      "HorizScrollDelta"         "-30"
 	#
 	
 	# Habilita el toque
