--- a/dotfiles/.xmobarrc
+++ b/dotfiles/.xmobarrc
@@ -10,87 +10,87 @@
 --
 --
 Config {
-	font = "xft:Cousine for Powerline:size=10"
-	, additionalFonts =
-		[ 
-			"xft:Mononoki Nerd Font:pixelsize=14:antialias=true:hinting=true"
-			,"xft:Mononoki Nerd Font:pixelsize=16:antialias=true:hinting=true"
-		]
-	, bgColor = "#1F2229"
-	, fgColor = "#abb2bf"
-	, position = TopSize L 100 30
-	, lowerOnStart = True
-	, hideOnStart = False
-	, allDesktops = True
-	, persistent = True
-	, commands = [
-		-- el 'StdinReader' no permite que los tab sean clickables
-		-- por eso se usa 'UnsafeStdinReader'
-		Run UnsafeStdinReader -- Entrada de Xmonad
+    font = "xft:Cousine for Powerline:size=9"
+    , additionalFonts =
+        [
+            "xft:Mononoki Nerd Font:pixelsize=14:antialias=true:hinting=true"
+            ,"xft:Mononoki Nerd Font:pixelsize=16:antialias=true:hinting=true"
+        ]
+    , bgColor = "#1F2229"
+    , fgColor = "#abb2bf"
+    , position = TopSize L 100 35
+    , lowerOnStart = True
+    , hideOnStart = False
+    , allDesktops = True
+    , persistent = True
+    , commands = [
+        -- el 'StdinReader' no permite que los tab sean clickables
+        -- por eso se usa 'UnsafeStdinReader'
+        Run UnsafeStdinReader -- Entrada de Xmonad
 
 
-		-- fecha y hora
-		-- , Run Date "%b %d %Y - (%H:%M)" "date" 50
-		,Run Date "<fn=1> </fn> %b %d %Y - (<fc=#abb2bf>%H:%M</fc>)" "date" 50
+        -- fecha y hora
+        -- , Run Date "%b %d %Y - (%H:%M)" "date" 50
+        ,Run Date "<fn=1> </fn> %b %d %Y / <fc=#abb2bf>%H:%M</fc>" "date" 50
 
 
-		-- memoria ram
-		, Run Memory [
-			"--template"    , "<fn=2> </fn>Mem: <usedbar> <usedratio>% / Cache: <cache>:MB"
-		] 20
+        -- memoria ram
+        , Run Memory [
+            "--template"    , "<fn=2> </fn>Mem: <usedbar> <usedratio>%"
+        ] 20
 
 
-		-- uso cpu
-		, Run Cpu [
-			"--template"   , "<fn=1> </fn> Cpu: <bar> <total>%  | <fc=#c678dd><fn=1> </fn> IOWait: <iowait>%</fc>"
-			, "--High"      , "50"
-			, "--normal"    , "#e5c07b"
-			, "--high"      , "red"
-		] 20
+        -- uso cpu
+        , Run Cpu [
+            "--template"   , "<fn=1> </fn> CPU: <bar> <total>%"
+            , "--High"      , "50"
+            , "--normal"    , "#e5c07b"
+            , "--high"      , "red"
+        ] 20
 
 
-		-- cpu temperatura
-		, Run CoreTemp [
-			"--template"   , "/ <core0>°C"
-			, "--Low"      , "50"        -- units: °C
-			, "--High"     , "80"        -- units: °C
-			, "--low"      , "#98c379"
-			, "--normal"   , "#e5c07b"
-			, "--high"     , "red"
-		] 50
+        -- cpu temperatura
+        , Run CoreTemp [
+            "--template"   , "/ <core0>°C"
+            , "--Low"      , "50"        -- units: °C
+            , "--High"     , "80"        -- units: °C
+            , "--low"      , "#98c379"
+            , "--normal"   , "#e5c07b"
+            , "--high"     , "red"
+        ] 50
 
 
-		-- cpu frecuencia
-		, Run CpuFreq [
-			"--template"   , " /  <cpu0>:GHz"
-			,"--ddigits"   , "1"
-			,"--Low"       , "0"
-			,"--High"      , "2"
-			,"--normal"    , "#98c379"
-			,"--high"      , "#61afef"
-		] 50
+        -- cpu frecuencia
+        , Run CpuFreq [
+            "--template"   , "/ <cpu0>:GHz"
+            ,"--ddigits"   , "1"
+            ,"--Low"       , "0"
+            ,"--High"      , "2"
+            ,"--normal"    , "#98c379"
+            ,"--high"      , "#61afef"
+        ] 50
 
 
-		-- bateria
-		, Run Battery [
-			"--template" , "<fn=1> </fn> Batt: <acstatus>"
-			, "--Low"      , "10"        -- units: %
-			, "--High"     , "80"        -- units: %
-			, "--low"      , "red"
-			, "--normal"   , "darkorange"
-			, "--high"     , "#98c379"
+        -- bateria
+        , Run Battery [
+            "--template" , "<fn=1> </fn> <acstatus>"
+            , "--Low"      , "10"        -- units: %
+            , "--High"     , "80"        -- units: %
+            , "--low"      , "red"
+            , "--normal"   , "darkorange"
+            , "--high"     , "#98c379"
 
-			, "--" -- battery specific options
-			-- discharging status
-			, "-o"	, "<left>% (<timeleft>)"
-			-- AC "on" status
-			, "-O"	, "<fc=#dAA520>Charging</fc>"
-			-- charged status
-			, "-i"	, "<fc=#61afef>Charged</fc>"
-		] 50
-	]
-	, sepChar = "%"
-	, alignSep = "}{"
-	, template = " %UnsafeStdinReader% }{ <fc=#e5c07b>%cpu%</fc> %cpufreq%  %coretemp%  |  <fc=#98c379>%memory%</fc>  |  <fc=#61afef>%date%</fc>  |  %battery% "
+            , "--" -- battery specific options
+            -- discharging status
+            , "-o"  , "<left>% (<timeleft>)"
+            -- AC "on" status
+            , "-O"  , "<fc=#dAA520>Charging</fc>"
+            -- charged status
+            , "-i"  , "<fc=#61afef>Charged</fc>"
+        ] 50
+    ]
+    , sepChar = "%"
+    , alignSep = "}{"
+    , template = " %UnsafeStdinReader% }{ <fc=#e5c07b>%cpu%</fc> %cpufreq% %coretemp%  |  <fc=#98c379>%memory%</fc>  |  <fc=#61afef>%date%</fc>  |  %battery% "
 }
 
