--- a/xorg/nvidia_bumblebee.conf
+++ b/xorg/nvidia_bumblebee.conf
@@ -19,7 +19,7 @@ Section "Device"
     Identifier  "DiscreteNvidia"
     Driver      "nvidia"
     VendorName  "NVIDIA Corporation"
-    BusID "PCI:01:00:0"
+    BusID "PCI:2d:00:0"
     Option "ProbeAllGpus" "false"
     Option "NoLogo" "true"
     Option "UseEDID" "false"
